--- a/python_control_structures_tutorial_corrected.ipynb
+++ b/python_control_structures_tutorial_corrected.ipynb
@@ -30,10 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "49af988c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is greater than 5\n"
+     ]
+    }
+   ],
    "source": [
     "# Example of if statement\n",
     "x = 10\n",
@@ -53,10 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "200007f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y is not greater than 10\n"
+     ]
+    }
+   ],
    "source": [
     "# Example of if-else statement\n",
     "y = 5\n",
@@ -78,10 +94,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "209ae5d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# Example of for loop\n",
     "for i in range(5):\n",
@@ -100,10 +128,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "439b4e9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is odd\n",
+      "2 is even\n",
+      "3 is odd\n",
+      "4 is even\n",
+      "5 is odd\n"
+     ]
+    }
+   ],
    "source": [
     "# Combining if statements with for loops\n",
     "numbers = [1, 2, 3, 4, 5]\n",
@@ -125,7 +165,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
