--- a/python_control_structures_tutorial_corrected.ipynb
+++ b/python_control_structures_tutorial_corrected.ipynb
@@ -156,6 +156,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c565dd72",
+   "metadata": {},
+   "source": [
+    "## Now we are all putting it together."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7dce1f9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 2 is even.\n",
+      "The number 3 is odd.\n",
+      "The number 4 is even.\n",
+      "The number 4 is even.\n",
+      "The number 5 is odd.\n",
+      "The number 6 is even.\n",
+      "The number 7 is odd.\n",
+      "The number 1 is odd.\n",
+      "The number 2 is even.\n",
+      "The number 3 is odd.\n",
+      "The number 4 is even.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is a demonstration code snippet that should be run in an interactive environment\n",
+    "# It will not execute as expected in static Jupyter notebook viewers or non-interactive environments\n",
+    "\n",
+    "while True:\n",
+    "    user_input = input(\"Enter a number (or type 'quit' to exit): \")\n",
+    "    if user_input.lower() == 'quit':\n",
+    "        print(\"Exiting the loop.\")\n",
+    "        break\n",
+    "    try:\n",
+    "        number = int(user_input)\n",
+    "        if number % 2 == 0:\n",
+    "            print(f\"The number {number} is even.\")\n",
+    "        else:\n",
+    "            print(f\"The number {number} is odd.\")\n",
+    "    except ValueError:\n",
+    "        print(\"Please enter a valid integer or 'quit' to exit.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "95f6325d",
    "metadata": {},
    "source": [
