--- a/python_control_structures_tutorial_corrected.ipynb
+++ b/python_control_structures_tutorial_corrected.ipynb
@@ -111,9 +111,12 @@
     }
    ],
    "source": [
-    "# Example of for loop\n",
-    "for i in range(5):\n",
-    "    print(i)"
+    "# Define a list of numbers\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "# Iterate over each number in the list and print it\n",
+    "for number in numbers:\n",
+    "    print(number)"
    ]
   },
   {
