--- a/python_control_structures_tutorial_corrected.ipynb
+++ b/python_control_structures_tutorial_corrected.ipynb
@@ -151,7 +151,8 @@
     "# Combining if statements with for loops\n",
     "numbers = [1, 2, 3, 4, 5]\n",
     "for number in numbers:\n",
-    "    if number % 2 == 0:\n",
+    "    remainder = number % 2\n",
+    "    if remainder == 0:\n",
     "        print(f'{number} is even')\n",
     "    else:\n",
     "        print(f'{number} is odd')"
