--- a/python_control_structures_tutorial_corrected.ipynb
+++ b/python_control_structures_tutorial_corrected.ipynb
@@ -131,19 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "439b4e9f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 is odd\n",
-      "2 is even\n",
-      "3 is odd\n",
-      "4 is even\n",
-      "5 is odd\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to connect to remote Jupyter Server.\n",
+      "\u001b[1;31mCheck that the Jupyter Server URL can be reached from a browser.\n",
+      "\u001b[1;31mhttps://jupyter-server-4jj5p4695r59f449-8888.preview.app.github.dev/. Click <a href='https://aka.ms/vscjremoteweb'>here</a> for more information."
      ]
     }
    ],
@@ -194,7 +193,8 @@
     "# This is a demonstration code snippet that should be run in an interactive environment\n",
     "# It will not execute as expected in static Jupyter notebook viewers or non-interactive environments\n",
     "\n",
-    "while True:\n",
+    "counter = [1, 2, 3, 4, 5]\n",
+    "for count in counter:\n",
     "    user_input = input(\"Enter a number (or type 'quit' to exit): \")\n",
     "    if user_input.lower() == 'quit':\n",
     "        print(\"Exiting the loop.\")\n",
