--- a/python_control_structures_tutorial_corrected.ipynb
+++ b/python_control_structures_tutorial_corrected.ipynb
@@ -205,6 +205,7 @@
     "            print(f\"The number {number} is even.\")\n",
     "        else:\n",
     "            print(f\"The number {number} is odd.\")\n",
+    "        print (\"counter: \" + str(count))\n",
     "    except ValueError:\n",
     "        print(\"Please enter a valid integer or 'quit' to exit.\")\n"
    ]
